tests/ui/dyn-compatibility/taint-const-eval.curr.stderr
error[E0038]: the trait `Qux` cannot be made into an object
  --> $DIR/taint-const-eval.rs:11:15
   |
LL | static FOO: &(dyn Qux + Sync) = "desc";
   |               ^^^^^^^^^^^^^^ `Qux` cannot be made into an object
   |
note: for a trait to be "dyn-compatible" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/taint-const-eval.rs:8:8
   |
LL | trait Qux {
   |       --- this trait cannot be made into an object...
LL |     fn bar();
   |        ^^^ ...because associated function `bar` has no `self` parameter
help: consider turning `bar` into a method by giving it a `&self` argument
   |
LL |     fn bar(&self);
   |            +++++
help: alternatively, consider constraining `bar` so it does not apply to trait objects
   |
LL |     fn bar() where Self: Sized;
   |              +++++++++++++++++

error[E0038]: the trait `Qux` cannot be made into an object
  --> $DIR/taint-const-eval.rs:11:33
   |
LL | static FOO: &(dyn Qux + Sync) = "desc";
   |                                 ^^^^^^ `Qux` cannot be made into an object
   |
note: for a trait to be "dyn-compatible" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/taint-const-eval.rs:8:8
   |
LL | trait Qux {
   |       --- this trait cannot be made into an object...
LL |     fn bar();
   |        ^^^ ...because associated function `bar` has no `self` parameter
   = note: required for the cast from `&'static str` to `&'static (dyn Qux + Sync + 'static)`
help: consider turning `bar` into a method by giving it a `&self` argument
   |
LL |     fn bar(&self);
   |            +++++
help: alternatively, consider constraining `bar` so it does not apply to trait objects
   |
LL |     fn bar() where Self: Sized;
   |              +++++++++++++++++

error[E0038]: the trait `Qux` cannot be made into an object
  --> $DIR/taint-const-eval.rs:11:15
   |
LL | static FOO: &(dyn Qux + Sync) = "desc";
   |               ^^^^^^^^^^^^^^ `Qux` cannot be made into an object
   |
note: for a trait to be "dyn-compatible" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/taint-const-eval.rs:8:8
   |
LL | trait Qux {
   |       --- this trait cannot be made into an object...
LL |     fn bar();
   |        ^^^ ...because associated function `bar` has no `self` parameter
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: consider turning `bar` into a method by giving it a `&self` argument
   |
LL |     fn bar(&self);
   |            +++++
help: alternatively, consider constraining `bar` so it does not apply to trait objects
   |
LL |     fn bar() where Self: Sized;
   |              +++++++++++++++++

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0038`.
